syntax = "proto3";
package go;
import "gamecomm.proto";
//【百人类游戏】
//入场 (场景)
message GameLandLordsEnter{
	uint64 UserID = 1;					//玩家ID
	int64 TimeStamp = 2;				//时间戳
	UserList Players = 3;				//玩家列表
	uint32 FreeTime = 4;
}
//注:通过mainID->subID 区分游戏状态(subID:101空闲、102游戏、103开奖、104旁观)

//游戏消息
// 玩家信息
message GameLandLordsPlayer{
	uint64 UserID = 1;					// 玩家ID
	uint32 Site = 2;					// 玩家座位
	bytes Cards = 3;					// 牌
	bool IsBanker = 4;					// 是否是庄家
}

// 开始
message GameLandLordsBegins{
	bytes CardsBottom = 1;				// 三张底牌
	bytes CardsHand = 2;				// 手牌
}

// 出牌
message GameLandLordsOutcard{
	uint32 Site = 1;					// 玩家座位
	bytes Cards = 2;					// 牌值
	string Hints = 3;					// 操作提示
}

// 操作
message GameLandLordsOperate{
	int32 Code = 1;						// 操作码
	bytes Cards = 2;					// 牌值
	string Hints = 3;					// 操作提示
}

// 得分
message GameLandLordsAward{
	uint32 Site = 1;					// 玩家座位
	bytes Codes = 2;					// 牌型
	int64 GetGold = 3;					// 获得的金币
}

// 结算
message GameLandLordsCheckout{
	repeated GameLandLordsAward players = 1;		// 所有玩家得分
}

