syntax = "proto3";
package go;
//注册
message Register{
     string Name = 1;			//用户
     string Password = 2;		//密码
	 string SecurityCode = 3;	//验证码
	 string MachineCode = 4;	//机器码
	 string InvitationCode = 5;	//邀请码
}
//注册结果
message RegisterResult{
     uint32 State = 1;			//状态:0成功 1失败 
     string Hints = 2;			//提示信息
}

//登录
message Login{
     string Account = 1;		//账号
     string Password = 2;		//密码
	 string SecurityCode = 3;	//验证码
	 string MachineCode = 4;	//机器码
}

//结果反馈
message ResResult{
     uint32 State = 1;			//状态:0成功 1失败 
     string Hints = 2;			//提示信息
}

/////////////list/////////////////
//任务信息
message TaskItem{
	uint32 TaskID = 1;
	uint32 Twice = 2; //实现次数
	string Hints = 3;//提示语 “恭喜 祝贺”之类
}

//任务列表
message TaskList{
	repeated TaskItem Task = 1;
}
//游戏列表
message GameList{
	repeated GameItem Items = 1;//子游戏
}




/////////////info//////////////////
//个人信息
message UserInfo{
	string Name = 1;			//用户
	string Accounts = 2;		//帐号
	string Password = 3;		//密码
	uint32 FaceID = 4;			//头像
	uint32 Gender = 5;			//性别
	uint32 Age = 6;				//年龄
	uint32 Level = 7;			//VIP级别
	int64  Gold = 8;			//金币
	string PassPortID = 9;		//证件号
	string Compellation =10;	//真实名字
	uint32 AgentID = 11;		//代理标识
	uint32 SpreaderGameID = 12; //推荐标识
	uint32 ClientAddr = 13;		//连接地址
	string MachineCode = 14;	//机器序列

}
//房间信息
message RoomInfo{
	uint32 RoomNum = 1;			//房间号码
	string RoomKey = 2;			//房间钥匙
	string RoomName = 3;		//房间名称
	GameList Games = 4;			//游戏列表
}

//游戏信息
message GameBaseInfo{
	 uint32 Type = 1;	 		//游戏类型
	 uint32 KindID = 2;	 		//游戏标识
	 uint32 Level = 3;			//房间类别 0:普通房 1:中级房 2:高级房 3:VIP房 4:冠军房
	 string Name = 4;			//游戏名称
	 uint32 EnterScore = 5;		//房间进场分
	 uint32 LessScore = 6;		//房间坐下分
}
//子游戏
message GameItem{
	uint32 ID = 1;
	GameBaseInfo Info = 2;//子游戏
}

//主页信息
message MasterInfo{
	UserInfo UserInfo = 1;			//用户信息
	repeated RoomInfo RoomsInfo = 2;//房间号列表【普通用户,敲一下门就可以进来，但是没有修改房间配置的权限，只有带钥匙的，才可以进行房间修改，即房主权限】
	TaskList Tasks = 3;				//任务列表
}



//////////////客户端发起(上行)/////////////////////////////
//进入房间
message ReqEnterRoom{
	uint32 RoomNum = 1;			//房间号码
	string RoomKey = 2;			//房间钥匙
}

//进入游戏
message ReqEnterGame{
	uint32 GameID = 1;			//游戏标识
}

//退出游戏
message ReqExitGame{
	uint32 GameID = 1;			//游戏标识
}



